[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Martin Hjelmare", email = "marhje52@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
description = "Use the Remember the Milk API with aiohttp."
license = {text = "Apache-2.0"}
name = "aiortm"
readme = "README.md"
requires-python = ">=3.12"
version = "0.11.0"

dependencies = [
  "aiohttp>=3.8",
  "ciso8601>=2.3",
  "mashumaro>=3.10",
  "yarl>=1.7",
]
scripts.aiortm = "aiortm.cli:cli"
urls."Bug Tracker" = "https://github.com/MartinHjelmare/aiortm/issues"
urls.Changelog = "https://github.com/MartinHjelmare/aiortm/blob/main/CHANGELOG.md"
urls.repository = "https://github.com/MartinHjelmare/aiortm"

[project.optional-dependencies]
cli = [
  "typer>=0.15,<1",
]

[dependency-groups]
dev = [
  "aioresponses==0.7.8",
  "codespell==2.4.1",
  "copier==9.9.0",
  "mypy==1.17.1",
  "pre-commit==4.2.0",
  "pytest==8.4.1",
  "pytest-aiohttp==1.1.0",
  "pytest-cov==6.2.1",
  "python-semantic-release>=10,<11",
  "ruff==0.12.7",
]

[tool.ruff]
line-length = 88
lint.ignore = [
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "EM101", # raw-string-in-exception
  "EM102", # f-string-in-exception
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "TC001", # typing-only-first-party-import
  "TC002", # typing-only-third-party-import
  "TC003", # typing-only-stdlib-import
  "TRY003", # raise-vanilla-args
]
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = ["aiortm", "tests"]
lint.per-file-ignores."setup.py" = ["D100"]
lint.per-file-ignores."tests/**/*" = [
  "PT004", # pytest-missing-fixture-name-underscore
  "S101",
  "S105", # hardcoded-password-string
  "S106", # hardcoded-password-func-arg
  "SLF001", # private-member-access
]
lint.select = [
  "ALL", # all rules
]
target-version = "py312"

[tool.pytest.ini_options]
addopts = """\
    -Wdefault
    --cov=aiortm
    --cov-report=term-missing
    --cov-report=xml
    """
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  "raise RuntimeError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
  'setup.py',
]
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
allow_untyped_defs = true
module = "tests.*"

[tool.semantic_release]
allow_zero_version = true
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "src/aiortm/__init__.py:__version__",
]

[tool.semantic_release.commit_parser_options]
parse_squash_commits = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
  '''Initial [Cc]ommit.*''', # codespell:ignore
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
